<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.view.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/top_bar_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_view_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:text="@string/user_name"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_view_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/user_name"
                        android:textSize="18sp"
                        android:textColor="@color/text_color" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id_label"
                    android:textSize="@dimen/label_dimen"
                    android:textColor="@color/labels_color" />

                <TextView
                    android:id="@+id/text_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:textSize="@dimen/text_dimen"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/user_gender_label"
                    android:textSize="@dimen/label_dimen"
                    android:textColor="@color/labels_color" />

                <TextView
                    android:id="@+id/text_view_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_gender"
                    android:textSize="@dimen/text_dimen"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/user_age_label"
                    android:textSize="@dimen/label_dimen"
                    android:textColor="@color/labels_color" />

                <TextView
                    android:id="@+id/text_view_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_age"
                    android:textSize="@dimen/text_dimen"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/user_city_label"
                    android:textSize="@dimen/label_dimen"
                    android:textColor="@color/labels_color" />

                <TextView
                    android:id="@+id/text_view_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_city"
                    android:textSize="@dimen/text_dimen"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/user_country_label"
                    android:textSize="@dimen/label_dimen"
                    android:textColor="@color/labels_color" />

                <TextView
                    android:id="@+id/text_view_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_country"
                    android:textSize="@dimen/text_dimen"
                    android:textColor="@color/text_color" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="8dp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_get_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background_shape"
                android:gravity="center"
                android:text="@string/get_random_user"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>